# microcosmos

./: .gitignore  README.md  microcosmos.cabal
defaults/posts/: home.md
defaults/static/css/: main.css
defaults/templates/: dir.html  post.html
src/: Main.hs
